; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs_vfsops.c_rtnorm.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs_vfsops.c_rtnorm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.puffs_usermount = type { i32 }
%struct.puffs_node = type { %struct.vattr }
%struct.vattr = type { i32 }

@VDIR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.puffs_usermount*, i8*, i32)* @rtnorm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtnorm(%struct.puffs_usermount* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.puffs_usermount*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.puffs_node*, align 8
  %8 = alloca %struct.vattr*, align 8
  store %struct.puffs_usermount* %0, %struct.puffs_usermount** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.puffs_usermount*, %struct.puffs_usermount** %4, align 8
  %10 = call %struct.puffs_node* @puffs_getroot(%struct.puffs_usermount* %9)
  store %struct.puffs_node* %10, %struct.puffs_node** %7, align 8
  %11 = load %struct.puffs_node*, %struct.puffs_node** %7, align 8
  %12 = getelementptr inbounds %struct.puffs_node, %struct.puffs_node* %11, i32 0, i32 0
  store %struct.vattr* %12, %struct.vattr** %8, align 8
  %13 = load %struct.vattr*, %struct.vattr** %8, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @dtfs_baseattrs(%struct.vattr* %13, i32 %14, i32 2)
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @VDIR, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load %struct.vattr*, %struct.vattr** %8, align 8
  %21 = getelementptr inbounds %struct.vattr, %struct.vattr* %20, i32 0, i32 0
  store i32 2, i32* %21, align 4
  br label %25

22:                                               ; preds = %3
  %23 = load %struct.vattr*, %struct.vattr** %8, align 8
  %24 = getelementptr inbounds %struct.vattr, %struct.vattr* %23, i32 0, i32 0
  store i32 1, i32* %24, align 4
  br label %25

25:                                               ; preds = %22, %19
  %26 = load %struct.puffs_usermount*, %struct.puffs_usermount** %4, align 8
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @puffs_setrootinfo(%struct.puffs_usermount* %26, i32 %27, i32 0, i32 0)
  ret i32 0
}

declare dso_local %struct.puffs_node* @puffs_getroot(%struct.puffs_usermount*) #1

declare dso_local i32 @dtfs_baseattrs(%struct.vattr*, i32, i32) #1

declare dso_local i32 @puffs_setrootinfo(%struct.puffs_usermount*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
